--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+     "@rollup/rollup-linux-x64-gnu": "^4.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
